--- a/clientt/index.html
+++ b/clientt/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/png" href="http://pluspng.com/img-png/shoes-png-sneaker-png-transparent-image-2500.png" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>JAP Collection</title>
   </head>
   <body>
     <div id="root" ></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+   </body>
 </html>
